<resources>
    <string name="app_name">Finder</string>

    <string name="action_settings">Settings</string>
    <string name="signup">Sign Up with Email</string>
    <string name="login">Log in</string>
    <string name="swipe">Swipe to Learn More</string>
    <string name="firstnames">First name</string>
    <string name="lastnames">Last name</string>
    <string name="Emails">Email</string>
    <string name="psws">Password</string>
    <string name="home">Home</string>
    <string name="store">Store</string>
    <string name="community">Community</string>
    <string name="me">Me</string>
    <string name="settings">Settings</string>
    <string name="Collect">Collect</string>
    <string name="add_to_cart">Add to cart</string>
    <string name="check_out_now">check out now</string>


    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_main_menu">title_activity_main_menu</string>
    <string name="title_activity_home_post_pager">title_activity_home_post_pager</string>
    <string name="title_activity_size_choose">size_choose</string>

    <string name="hello_world">Hello world!</string>
    <string name="title_activity_size_chooser_sets">size_chooser_sets</string>
    <string name="title_activity_comment_ui">Comment_ui</string>
    <string name="title_activity_myaccountui">Myaccountui</string>
    <string name="title_activity_changepasswordui">Changepasswordui</string>
    <string name="title_activity_likedsets">Likedsets</string>
    <string name="title_activity_likedsetui">Likedsetui</string>
</resources>
