<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent" android:layout_height="match_parent">
<FrameLayout
    android:id="@+id/fragment_container"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_alignParentTop="true">
    </FrameLayout>
    <LinearLayout
        android:id="@+id/menubar"
        android:orientation="horizontal"
        android:layout_alignParentBottom="true"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal"
        android:background="@color/white">
        <TextView
            android:id="@+id/home"
            android:layout_height="match_parent"
            android:layout_width="wrap_content"
            android:clickable="true"
            android:text="@string/home"
            android:textSize="15sp"
            android:textColor="@color/darkgray"
            android:layout_marginBottom="20dp"
            />
        <TextView
            android:id="@+id/store"
            android:layout_height="match_parent"
            android:layout_width="wrap_content"
            android:paddingLeft="20dp"
            android:clickable="true"
            android:text="@string/store"
            android:textSize="15sp"
            android:textColor="@color/darkgray"
            android:layout_marginBottom="20dp"
            />
        <TextView
        android:id="@+id/community"
        android:layout_height="match_parent"
        android:layout_width="wrap_content"
            android:paddingLeft="20dp"
        android:clickable="true"
        android:text="@string/community"
        android:textSize="15sp"
        android:textColor="@color/darkgray"
            android:layout_marginBottom="20dp"
        />
        <TextView
            android:id="@+id/me"
            android:layout_height="match_parent"
            android:layout_width="wrap_content"
            android:paddingLeft="20dp"
            android:clickable="true"
            android:text="@string/me"
            android:textSize="15sp"
            android:textColor="@color/darkgray"
            android:layout_marginBottom="20dp"
            />
        <TextView
            android:id="@+id/settings"
            android:layout_height="match_parent"
            android:layout_width="wrap_content"
            android:paddingLeft="20dp"
            android:clickable="true"
            android:text="@string/settings"
            android:textSize="15sp"
            android:textColor="@color/darkgray"
            android:layout_marginBottom="20dp"
            />

        </LinearLayout>
</RelativeLayout>
