<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/login_frag"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.chen.finder.com.example.chen.finder.ui.loginFragment">


    <RelativeLayout
        android:id="@+id/main_layout"
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center"
        >
    <LinearLayout
    android:id="@+id/logo_contatiner"
    android:orientation="horizontal"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:gravity="center"
        android:layout_marginTop="143dp"
        android:layout_alignParentTop="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true">
    <ImageView
        android:layout_height="50dp"
        android:layout_width="50dp"
        android:src="@drawable/logo"
        />
    <TextView
        android:id="@+id/app_name"
        android:paddingLeft="20dp"
        android:layout_height="wrap_content"
        android:layout_width="wrap_content"
        android:textColor="@color/material_blue_grey_950"
        android:textSize="40sp"
        android:textStyle="normal"
        android:text="@string/app_name"
        />
    </LinearLayout>
        <Button
            android:layout_marginTop="34dp"
            android:id="@+id/signup"
            android:layout_below="@+id/logo_contatiner"
            android:layout_height="wrap_content"
            android:layout_width="200dp"
            android:text="@string/signup"
            android:textAllCaps="false"
            android:background="@android:color/transparent"
            android:layout_centerInParent="true"
       />
        <Button
            android:id="@+id/login"
            android:layout_height="20dp"
            android:layout_width="wrap_content"
            android:text="@string/login"
            android:textSize="16sp"
            android:background="@android:color/transparent"
            android:textAllCaps="false"
            android:layout_centerHorizontal="true"
            android:layout_below="@+id/signup" />
        <Button
            android:id="@+id/swipe"
            android:layout_height="wrap_content"
            android:layout_width="wrap_content"
            android:text="@string/swipe"
            android:textAllCaps="false"
            android:background="@android:color/transparent"
            android:layout_alignParentBottom="true"
            android:layout_centerHorizontal="true"
            android:layout_marginBottom="38dp" />

    </RelativeLayout>

</FrameLayout>
